tests/ui/raw_sql/fail/nonnull_placeholder_none.stderr
error[E0277]: the trait bound `Option<i32>: drizzle_core::bind::BindValue<'_, _, drizzle::sqlite::types::Integer>` is not satisfied
  --> tests/ui/raw_sql/fail/nonnull_placeholder_none.rs:23:60
   |
23 |     let _rows: Vec<SelectUser> = q.all(db.conn(), [id.bind(None::<i32>)]).unwrap();
   |                                                       ---- ^^^^^^^^^^^ the trait `ValueTypeForDialect<_>` is not implemented for `Option<i32>`
   |                                                       |
   |                                                       required by a bound introduced by this call
   |
   = help: the following other types implement trait `ValueTypeForDialect<D>`:
             `&[u8]` implements `ValueTypeForDialect<PostgresDialect>`
             `&[u8]` implements `ValueTypeForDialect<SQLiteDialect>`
             `&str` implements `ValueTypeForDialect<PostgresDialect>`
             `&str` implements `ValueTypeForDialect<SQLiteDialect>`
             `&uuid::Uuid` implements `ValueTypeForDialect<PostgresDialect>`
             `&uuid::Uuid` implements `ValueTypeForDialect<SQLiteDialect>`
             `Arc<Vec<u8>>` implements `ValueTypeForDialect<PostgresDialect>`
             `Arc<Vec<u8>>` implements `ValueTypeForDialect<SQLiteDialect>`
           and $N others
   = note: required for `Option<i32>` to implement `drizzle_core::bind::BindValue<'_, _, drizzle::sqlite::types::Integer>`
note: required by a bound in `TypedPlaceholder::<T, N>::bind`
  --> core/src/placeholder.rs
   |
   |     pub fn bind<'a, V, R>(self, value: R) -> ParamBind<'a, V>
   |            ---- required by a bound in this associated function
...
   |         R: BindValue<'a, V, T>,
   |            ^^^^^^^^^^^^^^^^^^^ required by this bound in `TypedPlaceholder::<T, N>::bind`
